--- a/index.html
+++ b/index.html
@@ -75,8 +75,22 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 				<div class="elementor-element elementor-element-8d9f25b elementor-widget elementor-widget-html" data-id="8d9f25b" data-element_type="widget" data-widget_type="html.default">
 				<div class="elementor-widget-container">
 			<!-- Meta Pixel Code -->
-
-<!-- End Meta Pixel Code -->		</div>
+<script>
+	!function(f,b,e,v,n,t,s)
+	{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+	n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+	if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+	n.queue=[];t=b.createElement(e);t.async=!0;
+	t.src=v;s=b.getElementsByTagName(e)[0];
+	s.parentNode.insertBefore(t,s)}(window, document,'script',
+	'https://connect.facebook.net/en_US/fbevents.js');
+	fbq('init', '1211422869679945');
+	fbq('track', 'PageView');
+  </script>
+  <noscript><img height="1" width="1" style="display:none"
+	src="https://www.facebook.com/tr?id=1211422869679945&ev=PageView&noscript=1"
+  /></noscript>
+  <!-- End Meta Pixel Code -->		</div>
 				</div>
 				<div class="elementor-element elementor-element-b5f1e6e elementor-widget elementor-widget-heading" data-id="b5f1e6e" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
